Shorten the title

--- a/papers/ipc2011/ipc2011.tex
+++ b/papers/ipc2011/ipc2011.tex
@@ -8,11 +8,12 @@
 \parskip=\baselineskip
 
 \begin{document}
-\title{An Optimize and Learn Algorithm FRamework used for Parameter Tuning of the Divide and Evolve method applied to Solve Planning Problems by learning}
+%\title{An Optimize and Learn Algorithm FRamework used for Parameter Tuning of the Divide and Evolve method applied to Solve Planning Problems by learning}
+\title{An Optimizing and Learning Algorithm Framework used for Parameter Tuning of the Divide-and-Evolve Method}
 
 
 \author{M{\'a}ty{\'a}s Brendel$^{1}$ \\ \\ $^{1}$Projet TAO \\ INRIA Saclay \& LRI\\ Universit{\'e} Paris Sud \\ Orsay, France\\ matthias.brendel@lri.fr \\ marc.schoenauer@inria.fr
-\And  Johann Dreo $^{2}$ 
+\And  Johann Dr{\'e}o $^{2}$ 
 \And Pierre Sav{\'e}ant$^{2}$ \\ \\ $^{2}$Thales Research \& Technology\\ Palaiseau, France\\firstname.lastname@thalesgroup.com
 \And Marc Schoenauer$^{1}$ 
 \And Vincent Vidal$^{3}$ \\ \\ $^{3}$ONERA -- DCSD \\ Toulouse, France \\ vincent.vidal@onera.fr}
