--- a/papers/ipc2011/ipc2011.tex
+++ b/papers/ipc2011/ipc2011.tex
@@ -31,7 +31,7 @@
 
 Parameter tuning is basically a general optimization problem applied off-line to find the best parameters for a complex algorithm, for example for Evolutionary Algorithms (EAs). Whereas the efficiency of EAs has been demonstrated on several application domains (see for instance \cite{practice08} and \cite{ParameterSettingBook07}), they usually need computationally expensive parameter tuning. Consequently, one is tempted to use the off-the-shelf parameters, i.e. either default parameters of the framework he is using, or parameter values given in the literature for problems that are similar to his one. 
 
-Being a general optimization problem, there might be as many parameter tuning algorithms as optimization techniques. Several methods have been proposed  since Grefenstette's pioneering work \cite{Grefenstette86}. For a good comparison see \ref{Montero:2010}. Though we have some experience both with Racing (\ref{bibai:2009}), REVAC (\ref{Nannen07}) and ParamILS (\cite{ParamILS-JAIR}), one faces always the same generalization issue: can a parameter set that has been optimised for a given problem be successfully used to some other problem? The answer of course depends on the similarity of the two problems. However, even in an optimization domain (like AI Planning) precisely defined, there are very few examples today of meaningful similarity measures between optimization problems. Moreover, until now, sufficiently precise and accurate features have not been specified that would allow the user to describe the problem, so that the optimal parameter set could be learned from this features, and carried on to other problems with similar description. No design of a general learning framework is known to us and no general experiments has been carried out yet - at least to our knowledge - with some representative domains of AI planning.
+Being a general optimization problem, there might be as many parameter tuning algorithms as optimization techniques. Several methods have been proposed  since Grefenstette's pioneering work \cite{Grefenstette86}. For a good comparison see \cite{Montero:2010}. Though we have some experience both with Racing (\cite{bibai:2009}), REVAC (\cite{Nannen07}) and ParamILS (\cite{ParamILS-JAIR}), one faces always the same generalization issue: can a parameter set that has been optimised for a given problem be successfully used to some other problem? The answer of course depends on the similarity of the two problems. However, even in an optimization domain (like AI Planning) precisely defined, there are very few examples today of meaningful similarity measures between optimization problems. Moreover, until now, sufficiently precise and accurate features have not been specified that would allow the user to describe the problem, so that the optimal parameter set could be learned from this features, and carried on to other problems with similar description. No design of a general learning framework is known to us and no general experiments has been carried out yet - at least to our knowledge - with some representative domains of AI planning.
 
 The one exception we are aware of is the work \cite{Hutter06} in the SAT domain, in which many relevant features have been gathered based on half a century of SAT-research, and hundreds of papers. Extensive parameter tuning on several thousands of instances have allowed the authors to learn a meaningful mapping between between the features and parameters to running time, using function regression. Optimizing this model consisting of basis function makes it possible to choose the optimal parameters. This paper aims to generalize this work made in the SAT domain, we, however aim not to optimize running time, but fitness value, which is not a difference causing any problem. We design the aforementioned framework for any domain, and start with some experimenting. The machine learning techniques we use will also be different.
 
@@ -130,15 +130,15 @@ As it is obvious, our LaO algorithm is an open framework: one could use any appr
 
 Our choice for supervised learning was Artificial Neural Network (ANN), but other algorithms may also be used. We can suppose that the relation \begin{math}p_F\end{math} is not very complex, which means that a simple ANN may be used. One mapping shall be trained for one domain. One can also try to train one domain independent ANN, but that was not the task in this competition.
 
-The only open decision is which optimizer to use for parameter tuning. Since we have several instances to run, we can only afford a simple optimizer, we choose simply a Covariance Matrix Adaptation Evolution Strategy, specifically, (1+1)-CMA-ES (in short, CMA-ES, see \ref{hansen2001ecj}). We started CMA-ES with a known set of good default parameters, see \ref{section:competition}.
+The only open decision is which optimizer to use for parameter tuning. Since we have several instances to run, we can only afford a simple optimizer, we choose simply a Covariance Matrix Adaptation Evolution Strategy, specifically, (1+1)-CMA-ES (in short, CMA-ES, see \cite{hansen2001ecj}). We started CMA-ES with a known set of good default parameters.
 
 There is one element added to a conventional CMA-ES, and this is gene-transfer between instances. We have one CMA-ES running for each instance, because we can not afford to use a larger population. However, the CMA-ES instances of all the instances form a set of individuals. Crossover between individuals is usually not used in ES, however, in our case the the set of individuals does not really resemble to a population, but as a set of species. We have to assume that the optimum for the instances differ, they are in different niche of the parameter tuning word. However, we also may assume that a good chromosome of one instance may cat least help another instance. It may also be used as a hint in the optimization. Therefore random gene-transfer was used in our algorithm. 
 
 Using the ANN and gene-transfer as external hints in addition to the CMA-ES corrupts somewhat the later one. The CMA-ES shall be informed about these external hints, if they improve the fitness-function. These external hints are handled as the hint of the CMA-ES algorithm, i.e. we ask for a hint of the CMA-ES and change it to the external hint as if by chance that was the hint of CMA-ES. This way corruption is minimized. The global step size is updated with true or false, depending on the improvement or lack of improvement, covariance matrix is updated only in case of improvement.
 
-There is one additional technical problem with CMA-ES, this is that each parameter is restricted to an interval. This seems reasonable and makes our algorithm more stable. The parameters are actually normalized linearly to the [0,1] interval. For the boundary problem we applied a simple version of the box constraint handling technique described in \ref{hansen2009tec}. Our penalty term was simply \begin{math}||x^{feas}-x|| \end{math}, where \begin{math}x^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}x^{feas}\end{math} was recorded as a feasible solution, to pass for example to the ANN. Note that gene-transfer and the ANN itself can not give hints out of the box. In order to not to compromise too much CMA-ES several iterations of this were carried out for one hint of the ANN and one gene-transfer.
+There is one additional technical problem with CMA-ES, this is that each parameter is restricted to an interval. This seems reasonable and makes our algorithm more stable. The parameters are actually normalized linearly to the [0,1] interval. For the boundary problem we applied a simple version of the box constraint handling technique described in \cite{hansen2009tec}. Our penalty term was simply \begin{math}||x^{feas}-x|| \end{math}, where \begin{math}x^{feas}\end{math} is the closest value in the box. Moreover, only \begin{math}x^{feas}\end{math} was recorded as a feasible solution, to pass for example to the ANN. Note that gene-transfer and the ANN itself can not give hints out of the box. In order to not to compromise too much CMA-ES several iterations of this were carried out for one hint of the ANN and one gene-transfer.
 
-Our realization of our LaO algorithm uses the Shark library (\ref{shark08}) for CMA-ES and the FANN library for ANN (\ref{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster of LRI with 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, so our algorithm contains a scheduler to use the free capacity on this cluster.
+Our realization of our LaO algorithm uses the Shark library (\cite{shark08}) for CMA-ES and the FANN library for ANN (\cite{nissen}). To evaluate each parameter-setting with each instance, we use a computer-cluster of LRI with 60 computers, most of them have 4 cores, but some have 8. The cluster is used by many researchers, so our algorithm contains a scheduler to use the free capacity on this cluster.
 
 Since the parallel architecture used in our algorithm is somewhat heterogeneous, we can not rely on a fixed running time. Therefore, for each evaluation the number of evaluations is fixed for DaE. Moreover, since DaE is not deterministic, we carried out 11 runs and took the median cost as the result for that instance and that parameter-settings.
 
