--- a/papers/ipc2011/ipc2011.bib
+++ b/papers/ipc2011/ipc2011.bib
@@ -868,3 +868,9 @@
 	year = "2008"
 }
 
+@InProceedings{ Bardenet,
+	author = "R. Bardenet and B. Kégl",
+	title = "Surrogating the surrogate: accelerating Gaussian-process-based global optimization with a mixture cross-entropy algorithm",
+	booktitle = "Proceedings of the 27th International Conference on Machine Learning (ICML 2010)",
+	year = "2010",
+}
