--- a/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
+++ b/papers/GECCO2011/gecco2011brendelschoenauer/gecco2011brendelschoenauer.tex
@@ -156,13 +156,13 @@ Moreover, since DaE is not deterministic, we carried out 11 runs and took the me
 \section{Results}
 \label{section:results}
 
-In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We generated approximately 100 instances for each domain, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of evaluations as a terminating criterion, we carried out a run for each instancfeatues on our own server to measure the median of number of evaluations for each instance with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
+In the Planning and Learning Part of IPC2011 (IPC), there were 5 sample domains pre-published, with a corresponding problem-generator for each domain. The 5 domains are Ferry, Freecell, Grid, Mprime, and Sokoban. We excluded Ferry from this paper, since there were not enough number of instances to learn a mapping. For the remaining 4 domains we generated approximately 100 instances for each domain, since this seemed to be appropriate for a running time of 2-3 weeks. The description of the track fixes running time as 15 minutes. Since we use number of evaluations as a terminating criterion, we carried out a run for each instanc on our own server to measure the median of number of evaluations for each instance with our default parameters. The median of 11 runs were taken and used as a termination criterion for each instance in the train set. For many instances we did not have any result in 15 minutes, those we had to drop. The remaining instances were used for training. 
 
  \begin{table*}[ht]
 \centering
 \begin{tabular}{l c c c c c c c}
 \hline\hline
-Name & \# of iterations & \# of training instances & \# of test instances &  ANN-error & quality-ratio LAO & quality-ratio ANN on train & quality-ratio of ANN test \\ 
+Name & numiter & size of training & size of test &  ANN-error & Q in LAO & Q of ANN on train & Q of ANN on test \\ 
 \hline
 Freecell& 16 & 108 & 230 & 0.1 & 1.09 & 1.05 & 1.04  \\
 Grid & 10 & 55 & 124 & 0.09 & 1.09 & 1.05 & 1.03  \\
@@ -171,7 +171,7 @@ Sokoban & 8 & 32 & 52 & 0.11 & 	 &  &   \\
 \hline
 \end{tabular}
 \label{table:domains}
-\caption{Domains: note that only the actually usable training instances are shown. ANN-error is given as MSE, returned by FANN}
+\caption{Domains: note that only the actually usable training instances are shown. numiter= number of iterations. Size of train specifies the number of train instances. ANN-error is given as MSE, returned by FANN. Q=quality-ratio. "In Lao" means best found parameter-set in LaO.}
 \end{table*} 
 
  \begin{table*}[ht]
@@ -187,8 +187,8 @@ Sokoban & 0.01/0.03 & 0.69/0.61   & 0.2/0.32  & 0.1/0.03  &    \\
 
 \hline
 \end{tabular}
-\label{table:domains}
-\caption{Best results according to source of hint}
+\label{table:hints}
+\caption{Best results according to source of hint. Each cell shows percentages. The first number shows the percentage the corresponding source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account.}
 \end{table*} 
 
 
@@ -217,18 +217,25 @@ Number of offsprings& 100& 2000& 700 \\
 \caption{Controlled Parameters}
 \end{table*} 
 
-Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could only use all instances in the domain Freecell. In the other domains we got much less usable instances. The Mean Square Error (MSE) is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
+Table \ref{table:domains} shows the data for each domain, as you can see from the approximately 100 instances from each domain we could only use all of the training instances in the domain Freecell. In the other domains we got much less usable instances. The Mean Square Error (MSE) of the retrained ANN is shown for each domain. Note that since there can be multiple optimal parameters for the same instance (fitness-function is discrete), there might be an unavoidable error of the ANN.
 
 5 iterations of CMA-ES were carried out, followed by one ANN and one gene-transfer, and this cycle were iterated in the algorithm. This means that for example CMA-ES was running for 50 iterations for the Grid domain.
 
-The ANN had 3 fully connected layers, and the hidden layer had the same number of neurons as the input. Learning was done by the conventional back-propagation algorithm, which is the default in FANN. The ANN was only trained for 50 iterations in one iterations of LaO, so that we avoid over-training. Over the 10 iterations of LaO this means that 500 iterations of the ANN was carried out.
+The ANN had 3 fully connected layers, and the hidden layer had the same number of neurons as the input. Learning was done by the conventional back-propagation algorithm, which is the default in FANN. The ANN was only trained for 50 iterations in one iterations of LaO, so that we avoid over-training. Over the 10 iterations of LaO this means that 500 iterations of the ANN was carried out. However, note that the best parameters were trained with much iterations, depending on the time when they were found. Worst case only 50 iterations were made if the best parameter was found in the last iteration of LaO. 
 
-Termination criterion in the competition was simply the available time, the algorithm was running for several weeks parallel on our cluster, which is used also for other research, i.e. only a small number of 4 or 8-core processors were available for each domain in average.
+Table \ref{table:hints} shows how of each source of hint in LaO contributes to the best parameter-settings in the end. Fo each source the first number shows the percentage the corresponding source contributed to the best result if tie-breaks are taken into account, the second number shows the same, if only the first best parameter-set is taken into account. Note that the order of the sources is as it is in the table> for example if CMA-ES found a different parameter-settings with the same makespan as the default, that is not included in the first percentage, but it is included in the second. Analyzing both numbers can lead to interesting conclusions. For example, for domain Mprime the default parameter-settings was the optimal for 45\% of the instances, however, only in 2\% of the instances there was no other parameter-setting found with the same quality. Note that CMA-ES was giving the first hint in each iteration and had 5 times more possibilities than the ANN. Taking this into account the both the ANN and Genetransferer made an important contribution to optimization.
 
-The parameters of DAEx controlled are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature set consists of 12 features. First the number of fluents, goals, predicates, objects and types in the domain or instance, respectively add up to 5 features. One further feature is called mutex density, which is the number of mutexes divided by the number of all fluent-pairs. We also added number of lines, words and byte-count - obtained by the linux command called "wc" - of the instance and the domain file as some not so serious, primitive features. These later one add up to 6 features.
+Termination criterion in the competition was simply the available time, the algorithm was running for several weeks parallel on our cluster, which is used also for other research, i.e. only a small number of 4 or 8-core processors were available for each domain in average. After stopping LaO, retraining was made with 300 iterations with the best data. The MSE error of the ANN did not decrease using more iterations, which indicates that 300 iterations are enough.
+
+The controlled parameters of DAEx are described in table \ref{table:parameters}. For a detailed description of these parameters, see \cite{BibGECCO:2010}. The feature set consists of 12 features. First the number of fluents, goals, predicates, objects and types in the domain or instance, respectively add up to 5 features. One further feature is called mutex density, which is the number of mutexes divided by the number of all fluent-pairs. We also added number of lines, words and byte-count - obtained by the linux command called "wc" - of the instance and the domain file as some not so serious, primitive features. These later one add up to 6 features.
+
+Since testing was also carried out on the cluster, the termination criterion of testing was also number of evaluations. Table \ref{table:domains} shows our results, we present a quality-ratio metric as ised in IPC competitions. As a baseline we take the default parameter-setting. The ratio of the fitness value is computed for the default parameters and the best parameters. We present the quality-ratio "in LaO" which means the best found parameter. By definition this ratio can not be less for any instance. We also present quality-ratios for the retrained ANN on the training-set and the test-set. In this case, numbers less then 1 are possible, but were rare. As it can be seen in table \ref{table:domains}, we achieved a considerable quality-gain in training, but to transfer this to the ANN-model seems to be not easy. The model however generalizes excellently for the independent test-set. Results do not depend much on the domain. The size of the training set seems also not to be so crucial. The reason for this might be that for example for Freecell all the instances could be used, because they were not so hard. On the other hand, only few Sokoban instances could be used, but those represented the solvable instances properly.
 
 \section{Conclusions}
-\label{section:conclusions}	
+\label{section:conclusions}
+
+Our method presented in this paper is a model-based combined learner and optimizer for parameter tuning. We demonstrated that our algorithm is capable to improve the quality of the DaE algorithm considerably. We also demonstrated that some of this quality-improvement can be incorporated into an ANN-model, which is also able to generalize excellently to an independent test-set.
+Naturally, our algorithm also has some parameters, which can be tuned again. Parameter tuning in this respect is similar to the question of the final parameters of an ultimate theory of the Universe: one can always try to reduce one theory to another with possibly less parameters. But the infinite regress can not be stopped: there will always be some ultimate constants. Similarly, the parameters of our algorithm can be tuned by another algorithm and that may improve the results. The bad news here is that this infinite regress has also no end, moreover, the computing capacity needed is exploring. Good news is that in each step of such an infinite hierarchy an improvement can be made, moreover, the possible improvements become smaller and smaller, thus practically we can stop at some points. 
 
 
 \section{Future Work}
@@ -237,9 +244,9 @@ The parameters of DAEx controlled are described in table \ref{table:parameters}.
 Since LaO is only a framework, as indicated other kind of learning methods, and other kind of optimization techniques may be tried. Also the benefit of gene-transfer and/or cross-over might be investigated further. One shall also test, how inter-domain generalization works. Maybe it is possible to learn a mapping for all the domains, since the features may grasp the specificity of a domain. Naturally, the set of features may always be extended, or tested. Feature-selection would become important only if data with a considerable number of features and instances are present. This is not the case yet.
 
 
-\section*{Acknowledgements}
+\section{Acknowledgements}
 
-\section*{Restrictions on Further Use}
+\section{Restrictions on Further Use}
 
 \bibliographystyle{abbrv}
 \bibliography{gecco2011brendelschoenauer}
