DaE, Benchmarks, Hardware sections

--- a/papers/GECCO2011/dae_mt/dae_mt.bib
+++ b/papers/GECCO2011/dae_mt/dae_mt.bib
@@ -85,6 +85,14 @@
 
 % Divide-and-Evolve
 
+@INPROCEEDINGS{dae:gecco2010,
+	AUTHOR = "J. Biba{\"i} and P. Sav\'eant and M. Schoenauer and V. Vidal",
+	TITLE = "{On the Generality of Parameter Tuning in Evolutionary Planning}",
+	BOOKTITLE = "$20^{th}$ Genetic and Evolutionary Computation Conference (GECCO'10)",
+	PAGES = {241-248},
+	PUBLISHER = {ACM Press},
+	YEAR = {2010}	}
+
 @INPROCEEDINGS{dae:icaps2010,
 	AUTHOR = "J. Biba{\"i} and P. Sav\'eant and M. Schoenauer and V. Vidal",
 	TITLE = "{An Evolutionary Metaheuristic Based on State Decomposition for Domain-Independent Satisficing Planning}",
@@ -100,3 +108,14 @@
    year      = {2006},
    editor    = {J. Gottlieb and G. Raidl},
    publisher = {Springer Verlag} }
+   
+% YAHSP
+
+@InProceedings{yahsp:icaps2004,
+  author={Vidal, Vincent},
+  title={{A Lookahead Strategy for Heuristic Search Planning}},
+  booktitle={$14^{th}$ International Conference on Automated Planning and Scheduling (ICAPS-2004)},
+  year={2004},
+  pages={150-159},
+  publisher={AAAI Press}
+}
